# RustyEngine

./: CMakeLists.txt
samples/models/: suzanne.gltf
src/logger/: logger.h
src/main/: main.cpp
src/renderer/: VkBackend.cpp  VkInit.cpp  VkInit.h  VkPipelineBuilder.cpp  VkTools.cpp  VkTools.h  frustum.cpp  frustum.h  geometry_pipeline.cpp  geometry_pipeline.h  render_pipelines.h
src/scene/: component.h  entity.h
src/scene/components/: camera.cpp  camera.h  mesh.cpp  mesh.h  script.cpp  script.h  transform.cpp  transform.h
src/shaders/: simple_triangle.glsl
src/tools/model_loading/: model_loader.cpp  model_loader.h
src/window/: window.cpp  window.h
